--- a/index.css
+++ b/index.css
@@ -63,3 +63,34 @@ button{
     margin: 0;
     background-color: white;
 }
+
+@media (max-width:600px){
+
+    .app{
+        width: 320px;
+        height: 500px;
+    }
+
+    #input{
+        align-items: center;
+    }
+
+    #colorsBox div{
+    width: 60px;
+    height: 400px;
+    display: flex;
+    align-items: flex-end;
+}
+
+#colorsBox p{
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 24px;
+    font-family: sans-serif;
+    text-align: center;
+    width: 100%;
+    height: 30px;
+    margin: 0;
+    background-color: white;
+}
+}
